enable 4K horizontal resolution
- increase horizontal output resolution limit from 2048 to 4096
- adjust aspect ratios to compensate for 3X vertical stretching
- remove analog video output features (Y/C, scandoubler/HQ2X) and unused ASCAL features to save resources/meet timing requirements

--- a/MegaDrive.qsf
+++ b/MegaDrive.qsf
@@ -54,6 +54,9 @@ set_global_assignment -name VERILOG_MACRO "M68K_CHEAT=1"
 set_global_assignment -name VERILOG_MACRO "Z80_CHEAT=1"
 set_global_assignment -name VERILOG_MACRO "EXT_CLOCKS=1"
 
+set_global_assignment -name VERILOG_MACRO "MISTER_DISABLE_YC=1"
+set_global_assignment -name VERILOG_MACRO "MISTER_DOWNSCALE_NN=1"
+
 source sys/sys.tcl
 source sys/sys_analog.tcl
 source files.qip
